--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@storybook/addon-notes": "^5.3.21",
     "@storybook/addon-options": "^5.3.21",
     "@storybook/vue": "^5.3.21",
+    "@types/node": "^18.18.6",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
