--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "dev": "cross-env NODE_ENV=development rollup -w -c rollup.config.js",
     "lint": "vue-cli-service lint --fix",
+    "lint:scss": "stylelint ./src/**/*.{vue,scss} --fix",
     "storybook": "start-storybook -p 9001 -c ./docs/storybook -s ./docs/storybook/public",
     "test": "vue-cli-service test:unit"
   },
@@ -65,8 +66,15 @@
     "jest": "^27.5.1",
     "prettier": "^2.8.8",
     "rollup": "^2.79.1",
+    "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-serve": "^2.0.2",
     "rollup-plugin-vue": "^5.1.9",
+    "sass": "^1.69.4",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-order": "^6.0.3",
     "vue": "^2.7.14",
     "vue-eslint-parser": "^9.3.2",
     "vue-loader": "^15.8.3",
