--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,16 @@
 {
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
   },
   "include": [
-    "src/**/*"
+    "src/**/*.js",
+    "src/**/*.vue",
+    "tests/**/*.js",
   ],
   "exclude": [
     "node_modules",
